--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,6 @@ import Layout from "@layouts/Layout.astro";
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
 import LinkButton from "@components/LinkButton.astro";
-import Hr from "@components/Hr.astro";
 import Card from "@components/Card";
 import Socials from "@components/Socials.astro";
 import getSortedPosts from "@utils/getSortedPosts";
@@ -43,6 +42,12 @@ const socialCount = SOCIALS.filter((social) => social.active).length;
         <YouTube id="CDFCFPTG1qw" />
       </div>
     </div>
+
+    <section id="services">
+      <h2>Our Services</h2>
+      <p>Discover how we can help you with your mobile app needs.</p>
+      <LinkButton href="/services/"> View Services </LinkButton>
+    </section>
   </main>
 
   {
