--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,7 +23,7 @@ import ThemeIcon from "./ThemeIcon.astro";
 				><Icon
 					name="radix-icons:crumpled-paper"
 					class="w-5 h-5 group-hover:rotate-[17deg]"
-				/></a
+				/>Home</a
 			>
 			<div class="lg:hidden flex items-center justify-center gap-4">
 				<MenuIcon class="w-4 h-4 text-gray-800 dark:text-neutral-300" />
@@ -35,6 +35,7 @@ import ThemeIcon from "./ThemeIcon.astro";
 				class="flex flex-col lg:flex-row lg:gap-5 gap-3 mt-3 lg:mt-0 pb-4 lg:pb-0 border-b border-neutral-400 lg:border-b-0"
 			>
 				<li class="flex items-center"><a href="/about">About</a></li>
+				<!-- <li class="flex items-center"><a href="/projects">Projects</a></li> -->
 				<li class="flex items-center"><a href="/blog">Blog</a></li>
 				<li class="flex items-center"><a href="/tags">Tags</a></li>
 				<ThemeIcon class="w-10 hidden lg:flex" />
