--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,34 +12,64 @@ import Layout from "../layouts/BlogPost.astro";
 
 	<h2>Professional Journey</h2>
 	<p>
-		Throughout my career, I've had the opportunity to work with various mobile
-		technologies and frameworks. My expertise spans across iOS and Android
-		development, with proficiency in languages and frameworks like Swift,
-		Kotlin, React Native, and Flutter.
+		I started my development career in web development, before transitioning into 
+		Data Science and ML. But, I had a passion for mobile development, and soon after
+		switched to a Flutter position.
 	</p>
 
-	<h2>Technical Skills</h2>
-	<ul>
-		<li>iOS Development: Swift, SwiftUI, UIKit</li>
-		<li>Android Development: Kotlin, Jetpack Compose</li>
-		<li>Cross-platform: React Native, Flutter</li>
-		<li>Version Control: Git</li>
-		<li>CI/CD: Jenkins, Fastlane</li>
-		<li>Testing: XCTest, JUnit, Jest</li>
-	</ul>
+	<h2>Skills</h2>
+	<div class="grid grid-cols-4 gap-8">
+		<div>
+			<h3>Languages</h3>
+			<ul>
+				<li>JavaScript</li>
+				<li>Dart</li>
+				<li>Swift</li>
+				<li>Java</li>
+				<li>Python</li>
+				<li>Perl</li>
+			</ul>
+		</div>
+		<div>
+			<h3>Frameworks</h3>
+			<ul>
+				<li>Flutter</li>
+				<li>Astro</li>
+				<li>SwiftUI</li>
+				<li>NextJS</li>
+				<li>Node</li>
+				<li>React</li>
+			</ul>
+		</div>
+		<div>
+			<h3>Databases</h3>
+			<ul>
+				<li>PostgreSQL</li>
+				<li>Firebase</li>
+				<li>Supabase</li>
+				<li>MongoDB</li>
+			</ul>
+		</div>
+		<div>
+			<h3>Tools</h3>
+			<ul>
+				<li>Docker</li>
+				<li>Kubernetes</li>
+				<li>Git</li>
+			</ul>
+		</div>
+	</div>
 
 	<h2>Beyond Coding</h2>
 	<p>
-		When I'm not immersed in code, I enjoy exploring Austria's stunning
-		landscapes and keeping up with the latest trends in mobile development. I'm
-		always eager to learn new technologies and contribute to the mobile
-		development community.
+		When I'm not coding, I enjoy writing, reading fantasy books(I'm a big fan of
+		Brandon Sanderson), skiing, watching football.
 	</p>
 
 	<h2>Let's Connect</h2>
 	<p>
-		I'm always interested in connecting with fellow developers and potential
-		collaborators. Whether you want to discuss mobile development, potential
+		I'm always interested in connecting with other people. 
+		Whether you want to discuss mobile development, potential
 		projects, or just want to say hi, feel free to reach out!
 	</p>
 </Layout>
