--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -25,11 +25,13 @@ const projects = [
   <body class="w-full max-w-screen-md mx-auto my-4 dark:bg-neutral-800 dark:text-neutral-300 transition-colors duration-300">
     <Header />
     <main class="flex flex-col justify-center">
-      <div class="px-4 md:px-16 flex flex-col gap-8 md:my-10">
-        <h1 class="text-2xl md:text-4xl font-bold">Projects</h1>
-        <p class="text-lg">Here are some of the projects I've been working on. These range from mobile apps to experiments with AI integration.</p>
+      <div class="px-4 md:px-16 flex flex-col gap-4 md:my-10">
+        <h1 class="text-2xl md:text-5xl w-full">Projects</h1>
+        <p class="w-full text-justify text-base md:text-lg">
+          Here are some of the projects I've been working on. These range from mobile apps to experiments with AI integration.
+        </p>
         
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mt-8">
           {projects.map((project) => (
             <div class="bg-gray-100 dark:bg-neutral-700 rounded-lg overflow-hidden">
               {project.image && (
