--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -25,7 +25,7 @@ const { title, description, ogImage } = Astro.props
         <ThemeToggle />
       </div>
       <slot />
-      <Footer />
+      <!-- <Footer /> -->
     </div>
   </body>
 </html>
