update info, projects

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,6 +57,7 @@ import StudyCard from '../components/sections/StudyCard.astro'
       rowSpan="md:row-span-2"
       title="Portfolio & Projects"
       href="/portfolio"
+      body='Click here to see my projects'
     />
     <TimeZoneCard />
     <ContactsCard />
