--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -20,7 +20,7 @@ import { buttonVariants } from '../components/ui/button'
         <h2
           class="scroll-m-20 border-b pb-2 text-3xl font-semibold tracking-tight first:mt-0"
         >
-          Projects and clone's
+          Projects
         </h2>
       </div>
     </TopLayout>
