--- a/src/components/sections/IntroCard.astro
+++ b/src/components/sections/IntroCard.astro
@@ -12,7 +12,7 @@ import { Linkedin, Github, Mail } from 'lucide-react'
         <h6 class="m-0 text-sm font-light text-gray-500">welcome</h6>
         <p class="m-0 text-xl font-light">
           Hi, I'm <b class="font-bold">Ivan Trajanovski</b>, a mobile
-          developer specializing in Flutter and SwiftUI, based in Salzburg, Austria.
+          developer specializing, based in Salzburg, Austria.
           With a strong focus on creating intuitive user experiences and fluid animations,
           I craft beautiful, high-performance mobile applications. I'm passionate about
           mobile technology and always eager to take on new challenges in app development.
