--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ const { name, label } = basics;
 	<Experience className="print:col-span-3" />
 	<Education />
 </div>
-		<Tail />
+		<!-- <Tail /> -->
 	</main>
 
 	<KeyboardManager />
